@@ -9,3 +9,4 @@
 #    5 0x60960AADCFD005F3     0.0426  9.8%     1   0.0426 SELECT pg_catalog.pg_class pg_catalog.pg_roles pg_catalog.pg_namespace
 #    6 0xA99588746B4C6438     0.0283  6.5%     1   0.0283 SELECT pg_catalog.pg_class pg_catalog.pg_roles pg_catalog.pg_namespace
 #    7 0x32A1860329937485     0.0278  6.4%     1   0.0278 SELECT pg_catalog.pg_database pg_catalog.pg_roles
+# MISC 0xMISC                 0.0083  1.9%     1   0.0083 <1 ITEMS>
