@@ -40,6 +40,7 @@ select  n.column1 = a.column1, n.word3 = a.word3 from db2.tuningdetail_21_265507
 # Rank Query ID           Response time    Calls R/Call   Item
 # ==== ================== ================ ===== ======== ================
 #    1 0x66825DDC008FFA89     0.7261 95.3%     1   0.7261 UPDATE db?.tuningdetail_?_? db?.gonzo
+# MISC 0xMISC                 0.0360  4.7%     7   0.0051 <6 ITEMS>
 
 # Query 1: 0 QPS, 0x concurrency, ID 0x66825DDC008FFA89 at byte 332 ______
 # This item is included in the report because it matches --limit.
@@ -82,3 +83,4 @@ select  n.column1 = a.column1, n.word3 = a.word3 from db2.tuningdetail_21_265507
 # Rank Query ID           Response time    Calls R/Call   Item
 # ==== ================== ================ ===== ======== ================
 #    1 0x66825DDC008FFA89     0.7261 95.3%     1   0.7261 UPDATE db?.tuningdetail_?_? db?.gonzo
+# MISC 0xMISC                 0.0360  4.7%     7   0.0051 <6 ITEMS>
