@@ -5,3 +5,4 @@
 #    1 0x31DA25F95494CA95     0.1494 99.9%     1   0.1494 SHOW STATUS
 #    2 0x3AEAAD0E15D725B5     0.0001  0.1%     2   0.0000 SET
 #    3 0x813031B8BBC3B329     0.0000  0.0%     1   0.0000 COMMIT
+# MISC 0xMISC                 0.0000  0.0%     1   0.0000 <1 ITEMS>
