@@ -3,6 +3,7 @@ Changelog for mk-query-digest:
    * Profile response time % did not match query pct (issue 1073).
    * Added --progress (169).
    * ORDER BY with ASC fingerprinted differently than without ASC (issue 1030).
+   * Added MISC items to profile report (issue 1043).
 
 2010-06-08: version 0.9.18
 
